fixed the newsletter cards and used flex-wrap for the layout

--- a/styles/NewsletterCard.module.css
+++ b/styles/NewsletterCard.module.css
@@ -1,20 +1,16 @@
 .card {
   position: relative;
-  aspect-ratio: 342 / 467;
-  width: clamp(150px, 90%, 342px);
   border-radius: 12px;
-  overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
   transition: box-shadow 0.3s ease, transform 0.4s ease;
   margin: 20px auto;
   cursor: pointer;
+  width: 400px;
+  height: 550px;
+  overflow: hidden;
 }
 
 .imagecontainer {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -24,27 +20,23 @@
   height: 100%;
   object-fit: cover;
   transition: transform 0.4s ease;
+  border-radius: 15px;
 }
 
 .content {
   position: absolute;
   bottom: 0;
-  left: 0;
-  right: 0;
   background: #000000d1;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding: 10px 12px;
+  padding: 0px 12px;
   color: white;
   opacity: 0;
-  transform: translateY(10px);
   transition: opacity 0.4s ease, transform 0.4s ease;
   width: 100%;
-  max-height: fit-content; /* Added max-height */
+  height: 80px;
 }
 
 .card:hover {
@@ -82,7 +74,7 @@
   align-items: center;
   margin-top: 3rem;
   width: 100%;
-  padding: 1rem 1rem 1rem 1rem;
+  padding: 1rem;
 }
 
 .heading {
@@ -110,20 +102,24 @@
   vertical-align: middle;
 }
 
-.grid {
-  display: grid;
-  width: 65%;
-  height: auto;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-}
-
 @media (max-width: 768px) {
   .title {
     font-size: 0.95rem;
   }
   .description {
     font-size: 0.75rem;
+  }
+}
+
+@media (max-width: 520px) {
+  .card {
+    width: 85vw;
+    height: fit-content;
+  }
+  
+  .image {
+    width: 85vw;
+    height: fit-content;
   }
 }
 
@@ -139,10 +135,6 @@
   }
   .subheading {
     display: none;
-  }
-  .grid {
-    width: 90%;
-    grid-template-columns: repeat(1, 1fr);
   }
 }
 
